name:                LeaseReport
version:             0.1.0.0
synopsis:            A tool to inspect leases on shares on a Tahoe-LAFS storage server.
description:
homepage:            https://github.com/PrivateStorageio/LeaseReport#readme
license:             BSD3
license-file:        LICENSE
author:              Jean-Paul Calderone
maintainer:          exarkun@twistedmatrix.com
copyright:           2020 PrivateStorage.io, LLC
category:            Cryptography
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable LeaseReport
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
